--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <main>
         <div class="form-group col-sm-10 col-lg-8 mx-auto mb-5">
             <label for="innlegg"></label>
+            <input type="text" id="title" placeholder="Title" class="form-control mb-4 border border-primary">
             <textarea placeholder="Skriv et innlegg" class="form-control mb-4 border border-primary" id="inlegg" style="resize: none;" rows="5"></textarea>
-            <button class="btn btn-outline-white my-2 my-sm-0 btn-primary" type="submit">Publiser</button>
+            <button class="btn btn-outline-white my-2 my-sm-0 btn-primary" id="postBtn" type="submit">Publiser</button>
         </div>
     </main>
     <aside class="mt-5">
