--- a/login.html
+++ b/login.html
@@ -42,6 +42,7 @@
     <main class="form-group m-4 col-lg-6 col-sm-8 mx-auto">
         <img src="../Media/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" class="rounded-circle mx-auto d-block w-10 border border-dark" width="200px" height="200px" alt="Marika jenssen sitt profil bilde">
         <h1 class="h3 mb-3 fw-normal">Sign in</h1>
+        <p class="text-danger" id="bannerWrong"></p>
         <div class="form-floating mb-4">
             <input type="email" class="form-control border border-primary" id="mailInput" placeholder="Mail@mail" required>
             <label for="mailInput">E-mail</label>
