--- a/register.html
+++ b/register.html
@@ -41,18 +41,18 @@
     </header>
 <main class="form-group m-4 col-lg-6 col-sm-8 mx-auto">    
     <h1>Register</h1>
-    <p id="usernameMsg"></p>
+    <p class = "text-danger" id="usernameMsg"></p>
     <div class="form-floating mb-4 ">
         <input type="text" id="nameRegister" class="form-control border border-primary" placeholder="Name" required>
         <label for="nameInput">Name</label>
-    </div>
+    </div>        
+    <p class = "text-danger" id="mailMsg"></p>
     <div class="form-floating mb-4">
-        <p id="mailMsg"></p>
         <input type="name" class="form-control border border-primary" id="mailRegister" placeholder="Mail@mail" required>
         <label for="mailInput">E-mail</label>
-    </div>
+    </div>        
+    <p class = "text-danger" id="passwordMsg"></p>
     <div class="form-floating mb-4 ">
-        <p id="passwordMsg"></p>
         <input type="password" id="passwordRegister" class="form-control border border-primary" placeholder="Password" required>
         <label for="passwordInput">Password</label>
     </div>
