Ferdig med js kravene

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <input class="form-control me-2" id="searchFilter" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-primary btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
@@ -47,12 +47,6 @@
             <button class="btn btn-outline-primary my-2 my-sm-0" id="postBtn" type="submit">Publiser</button>
         </div>
     </main>
-    <div class=" col-sm-10 col-lg-8 mx-auto mb-5">    
-      <select name="posts" id="postFilter" class="bg-light border-primary border rounded">
-        <option value="all">all</option>
-        <option value="pictures">Image posts</option>
-      </select>
-    </div>
     <aside class="mt-5">
       <div id="outPost" class="col-sm-10 col-lg-8 mx-auto mb-5 ">You are not logged in. <a href="login.html">Log in</a></div>
     </aside>
