--- a/edit-post.html
+++ b/edit-post.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="./script/editpost.js" defer></script>
 </head>
-<body>
-    <header class="bg-primary sticky-top">
+<body class="bg-secondary d-flex flex-column min-vh-100">
+  <header class="bg-primary sticky-top">
         <div class="container row d-flex">
           <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
@@ -47,8 +47,8 @@
             <button class="btn btn-outline-primary my-2 my-sm-0" id="editBtn" type="submit">Publiser</button>
         </div>
     </main>
-    <footer class="bg-primary text-center" style="height: 100px;">
-        <small class="">Css-Framework-CA &copy;Copyright</small>
+    <footer class="bg-primary text-center mt-auto" style="height: 100px;">
+      <small class="">Css-Framework-CA &copy;Copyright</small>
     </footer>    
 
 
