--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="./script/main.js" defer></script>
   </head>
-<body class="">
+<body class="bg-secondary d-flex flex-column min-vh-100">
     <header class="bg-primary sticky-top">
         <div class="container row d-flex">
           <nav class="navbar navbar-expand-lg bg-primary">
@@ -44,14 +44,14 @@
             <label for="innlegg"></label>
             <input type="text" id="title" placeholder="Title" class="form-control mb-4 border border-primary">
             <textarea placeholder="Skriv et innlegg" class="form-control mb-4 border border-primary" id="inlegg" style="resize: none;" rows="5"></textarea>
-            <button class="btn btn-outline-primary my-2 my-sm-0" id="postBtn" type="submit">Publiser</button>
+            <button class="btn btn-outline-dark my-2 my-sm-0" id="postBtn" type="submit">Publiser</button>
         </div>
     </main>
     <aside class="mt-5">
       <div id="outPost" class="col-sm-10 col-lg-8 mx-auto mb-5 ">You are not logged in. <a href="login.html">Log in</a></div>
     </aside>
-    <footer class="bg-primary text-center" style="height: 100px;">
-        <small class="">Css-Framework-CA &copy;Copyright</small>
+    <footer class="bg-primary text-center mt-auto" style="height: 100px;">
+      <small class="">Css-Framework-CA &copy;Copyright</small>
     </footer>    
 </body>
 </html>
