--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="./script/login.js" defer></script>
 </head>
-<body class="bg-secondary">
+<body class="bg-secondary d-flex flex-column min-vh-100">
     <header class="bg-primary sticky-top">
         <div class="container row">
           <nav class="navbar navbar-expand-lg bg-primary">
@@ -40,9 +40,6 @@
         </div>
     </header>
     <main class="form-group m-4 col-lg-6 col-sm-8 mx-auto">
-        <img src="../Media/matheus-ferrero-W7b3eDUb_2I-unsplash.jpg" class="rounded-circle mx-auto d-block w-10 border border-dark" width="200px" height="200px" alt="Marika jenssen sitt profil bilde">
-        <h1 class="h3 mb-3 fw-normal">Sign in</h1>
-        <p class="text-danger" id="bannerWrong"></p>
         <div class="form-floating mb-4">
             <input type="email" class="form-control border border-primary" id="mailInput" placeholder="Mail@mail" required>
             <label for="mailInput">E-mail</label>
@@ -60,7 +57,7 @@
         <input type="submit" id="knappen"></input>
         <a href="./register.html" class="text-muted">Registrer deg</a>    
       </main>
-    <footer class="bg-primary text-center" style="height: 100px;">
+    <footer class="bg-primary text-center mt-auto" style="height: 100px;">
         <small class="">Css-Framework-CA &copy;Copyright</small>
     </footer>    
 </body>    
