--- a/register.html
+++ b/register.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="./script/register.js" defer></script>
 </head>
-<body class="bg-secondary">
-    <header class="bg-primary sticky-top">
+<body class="bg-secondary d-flex flex-column min-vh-100">
+  <header class="bg-primary sticky-top">
         <div class="container row">
           <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
@@ -57,6 +57,10 @@
         <label for="passwordInput">Password</label>
     </div>
     <input type="submit" id="knappenRegister"></input>    
+    <footer class="bg-primary text-center mt-auto" style="height: 100px;">
+      <small class="">Css-Framework-CA &copy;Copyright</small>
+    </footer>    
+
 </main>
     
 </body>
