--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="./script/login.js" defer></script>
 </head>
-<body class="bg-secondary d-flex flex-column min-vh-100">
-    <header class="bg-primary sticky-top">
+<main class="form-group m-4 col-lg-6 col-sm-8 mx-auto">    
+  <header class="bg-primary sticky-top">
         <div class="container row">
           <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container-fluid">
@@ -40,6 +40,7 @@
         </div>
     </header>
     <main class="form-group m-4 col-lg-6 col-sm-8 mx-auto">
+        <p class="text-danger" id="bannerWrong"></p>
         <div class="form-floating mb-4">
             <input type="email" class="form-control border border-primary" id="mailInput" placeholder="Mail@mail" required>
             <label for="mailInput">E-mail</label>
@@ -57,7 +58,7 @@
         <input type="submit" id="knappen"></input>
         <a href="./register.html" class="text-muted">Registrer deg</a>    
       </main>
-    <footer class="bg-primary text-center mt-auto" style="height: 100px;">
+      <footer class="bg-primary text-center mt-auto" style="height: 100px;">
         <small class="">Css-Framework-CA &copy;Copyright</small>
     </footer>    
 </body>    
