--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="./script/login.js" defer></script>
 </head>
-<body class="form-group m-4 col-lg-6 col-sm-8 mx-auto bg-primary">    
+<body class="bg-secondary d-flex flex-column min-vh-100">
   <header class="bg-primary sticky-top">
         <div class="container row">
           <nav class="navbar navbar-expand-lg bg-primary">
