--- a/edit-post.html
+++ b/edit-post.html
@@ -40,12 +40,12 @@
         </div>
     </header>
     <main>
-        <div class="form-group col-sm-10 col-lg-8 mx-auto mb-5">
-            <label for="innlegg"></label>
-            <input type="text" id="title" placeholder="Title" class="form-control mb-4 border border-primary">
-            <textarea placeholder="Skriv et innlegg" class="form-control mb-4 border border-primary" id="inlegg" style="resize: none;" rows="5"></textarea>
-            <button class="btn btn-outline-primary my-2 my-sm-0" id="editBtn" type="submit">Publiser</button>
+        <div id="edit">
         </div>
+        <div class="form-group col-sm-10 col-lg-8 mx-auto mb-5">
+          <button class="btn btn-outline-primary my-2 my-sm-0" id="editBtn" type="submit">Publiser</button>
+        </div>
+        
     </main>
     <footer class="bg-primary text-center mt-auto" style="height: 100px;">
       <small class="">Css-Framework-CA &copy;Copyright</small>
