--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     <title>My profile</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="./script/main.js"></script>
+    <script src="./script/myprofil.js"></script>
 </head>
 <body class="bg-secondary d-flex flex-column min-vh-100">
   <header class="bg-primary sticky-top">
@@ -39,12 +39,19 @@
           </nav>
         </div>
     </header>
-    <main class="d-sm-flex col-12 col-sm-8 mx-sm-auto d-sm-flex">
-      <div class="profile">
+    <main class="">
+      <div class="profile w-25 mx-auto ">
+        <img src="./media/blank-profile-picture-gc1cc27fcf_1280.png" alt="profile pic" class="rounded-circle img-thumbnail">
       </div>
+      <div class="form-group col-sm-10 col-lg-8 mx-auto mb-5">
+        <label for="innlegg"></label>
+        <input type="text" id="title" placeholder="Title" class="form-control mb-4 border border-primary">
+        <textarea placeholder="Skriv et innlegg" class="form-control mb-4 border border-primary" id="inlegg" style="resize: none;" rows="5"></textarea>
+        <button class="btn btn-outline-dark my-2 my-sm-0" id="postBtn" type="submit">Publiser</button>
+    </div>
     </main>
     <aside>
-      <div class="myPosts">
+      <div id="outPost">
       </div>
     </aside>
     <footer class="bg-primary text-center mt-auto" style="height: 100px;">
